--- a/website/static/main.html
+++ b/website/static/main.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    
     <header class="header">
         <div class="container">
            
@@ -21,9 +22,11 @@
                     <div class="menu__btn">
                         <span></span><span></span><span></span>
                     </div>
-                    <ul class="menu__list">
+                    <ul class="menu__list ">
+                        <form class="menu__list-item menu__list-form">
                         <li class="menu__list-item"><input class="menu__list-item--input-style" type="text" name="login" placeholder="логин"></li>
                         <li class="menu__list-item"><input class="menu__list-item--input-style" type="text" name="pass" placeholder="пароль"></li>
+                    </form>
                         <li class="menu__list-item"><a class="menu__list-link" href="#">Вход</a></li>
                         <li class="menu__list-item"><a class="menu__list-link" href="#">Регистрация</a></li> 
                     </ul>
@@ -74,7 +77,20 @@
                             <img src="images/small_spb/5.png" alt="" class="services__item-img">
                             <h6 class="services__item-title">О нас</h6>
                         </div>
-                    </a> <a class="services__item">
+                    </a> 
+                    <a class="services__item">
+                        <div class="services__item-inner">
+                            <img src="images/small_spb/3.png" alt="" class="services__item-img">
+                            <h6 class="services__item-title">Новости</h6>
+                        </div>
+                    </a>
+                     <a class="services__item">
+                        <div class="services__item-inner">
+                            <img src="images/small_spb/icon8.png" alt="" class="services__item-img">
+                            <h6 class="services__item-title">Галерея</h6>
+                        </div>
+                    </a>
+                    <a class="services__item">
                         <div class="services__item-inner">
                             <img src="images/small_spb/item-1.svg" alt="" class="services__item-img">
                             <h6 class="services__item-title">FAQ</h6>
@@ -89,6 +105,16 @@
             <h3 class="box-subtitle__title title">Последние новости о нашем поселке.</h3>
         </div>
     </section>
+  
+
+
+
+
+
+
+
+
+
   
     <section class="news">
         <div class="container">
