--- a/website/static/personal_area.html
+++ b/website/static/personal_area.html
@@ -85,9 +85,10 @@
 					<form class="user_info__sub-form">
 						<span class="user_info__sub-title">Изменить пароль:</span>
 						<div class="user_info__sub-form--flex"> 
-							<input class="user_info__sub-input" type="password" name="" placeholder="пароль">
-							<input class="user_info__sub-input" type="password" name="" placeholder="новый пароль">
-							<button class="user_info__change-passwor">Изменить пароль</button>
+							<input class="user_info__item user_info__sub-input" type="password" name="" placeholder="пароль">
+							<input class="user_info__item user_info__sub-input" type="password" name="" placeholder="новый пароль">
+							<input class="user_info__item user_info__sub-input" type="password" name="" placeholder="повторить пароль">
+							<button class="user_info__item user_info__change-passwor">Изменить пароль</button>
 						</div>
 					</form>
 				</div>
