правки по галерее

--- a/website/static/galery.html
+++ b/website/static/galery.html
@@ -9,6 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Roboto+Condensed:wght@300;400&display=swap" rel="stylesheet">
 	 <link rel="stylesheet" href="css/reset.css">
 	 <link rel="stylesheet" href="css/slick.css">
+	 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.css"/>
 	 <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -40,13 +41,14 @@
 		</div>
 		<div class="container">
 			<div class="galery">
-				<img class="galery__item-img" src="images/small_spb/prscr-1.PNG" alt="photo">
-				<img class="galery__item-img" src="images/small_spb/prscr-1.PNG" alt="photo">
-				<img class="galery__item-img" src="images/small_spb/prscr-1.PNG" alt="photo">
-				<img class="galery__item-img" src="images/small_spb/prscr-1.PNG" alt="photo">
-				<img class="galery__item-img" src="images/small_spb/prscr-1.PNG" alt="photo">
-				<img class="galery__item-img" src="images/small_spb/prscr-1.PNG" alt="photo">
-				<img class="galery__item-img" src="images/small_spb/prscr-1.PNG" alt="photo">
+				<img class="galery__item-img" data-fancybox="gallery" src="images/small_spb/prscr-1.PNG" alt="photo">
+				<img class="galery__item-img" data-fancybox="gallery" src="images/small_spb/prscr-1.PNG" alt="photo">
+				<img class="galery__item-img" data-fancybox="gallery" src="images/small_spb/prscr-1.PNG" alt="photo">
+				<img class="galery__item-img" data-fancybox="gallery" src="images/small_spb/prscr-1.PNG" alt="photo">
+				<img class="galery__item-img" data-fancybox="gallery" src="images/small_spb/prscr-1.PNG" alt="photo">
+				<img class="galery__item-img" data-fancybox="gallery" src="images/small_spb/prscr-1.PNG" alt="photo">
+				<img class="galery__item-img" data-fancybox="gallery" src="images/small_spb/prscr-1.PNG" alt="photo">
+				<img class="galery__item-img" data-fancybox="gallery" src="images/small_spb/prscr-1.PNG" alt="photo">
 				
 
 
@@ -61,7 +63,7 @@
 			</div>
 		</div>
 	</footer>
-
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@4.0/dist/fancybox.umd.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/main.js"></script>
